@@ -32,6 +32,8 @@ PHP                                                                        NEWS
   . array_udiff_assoc(). (Andrey)
   . array_udiff_uassoc(). (Andrey)
   . array_diff_uassoc(). (Andrey)
+  . uuencode(). (Ilia)
+  . uudecode(). (Ilia)
 - Added "resume_pos" context option to "ftp://" wrapper. (Sara)
 - Added optional parameter to OCIWriteTemporaryLob() to specify the type of LOB
   (Patch by Novicky Marek <novicky@aarongroup.cz>). (Thies)
